--- a/kubedeploy.yml
+++ b/kubedeploy.yml
@@ -1,1 +1,38 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: healthcare-deploy
+  labels:
+    app: healthcare-deploy
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: healthcare-app
+  template:
+    metadata:
+      labels:
+        app: healthcare-app
+    spec:
+      containers:
+      - name: healthcare-container
+        image: iamfaizanali/healthcare-automatic
+        ports:
+        - containerPort: 8082
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: healthcare-np-service
+  labels:
+    app: healthcare-app
+spec:
+  selector:
+    app: healthcare-deploy
+
+  type: NodePort
+  ports:
+  - nodePort: 30823
+    port: 8082
+    targetPort: 8082
 
